<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
    <!--android:id="@+id/action_profile"-->
    <!--android:name="@string/title_profile"-->
    <!--android:icon="@drawable/ic_tag_faces_black_24dp"-->
    <!--android:title="@string/title_profile" />-->
    <item
        android:id="@+id/action_shopping"
        android:name="@string/title_shopping"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/title_shopping" />
    <item
        android:id="@+id/action_tag"
        android:name="@string/title_tag"
        android:icon="@drawable/ic_tag"
        android:title="@string/title_tag" />
    <item
        android:id="@+id/action_home"
        android:name="@string/title_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/action_book"
        android:name="@string/title_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/action_profile"
        android:name="@string/title_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>